package ch.hslu.cas.msed.blobfish.board.ui;

public enum SquareColor {
    LIGHT,
    DARK
}
