@startuml

class ch.hslu.cas.msed.blobfish.game.ChessGame {
	{field} -terminal : org.jline.terminal.Terminal
	{method} -shouldRestart ( paramInputReader1 : ch.hslu.cas.msed.blobfish.game.InputReader , paramOutputWriter2 : ch.hslu.cas.msed.blobfish.game.OutputWriter ) : boolean
	{method} +start () : void
	{method} -writeEndGameMessage ( paramOutputWriter1 : ch.hslu.cas.msed.blobfish.game.OutputWriter ) : void
}


class ch.hslu.cas.msed.blobfish.game.InputReader {
	{field} -reader : org.jline.reader.LineReader
	{method} +readLine ( paramString1 : String ) : String
}


class ch.hslu.cas.msed.blobfish.game.MatchConfig {
	{method} +black () : ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +white () : ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer
}


class ch.hslu.cas.msed.blobfish.game.OutputWriter {
	{field} -terminal : org.jline.terminal.Terminal
	{method} +flush () : void
	{method} +print ( paramString1 : String ) : void
	{method} +printAndFlush ( paramString1 : String ) : void
	{method} +println ( paramString1 : String ) : void
	{method} +printlnAndFlush ( paramString1 : String ) : void
}


class ch.hslu.cas.msed.blobfish.game.exception.GameAbortedException {
}


class ch.hslu.cas.msed.blobfish.game.exception.MatchAbortedException {
}


abstract class ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer {
	{field} -playerColor : ch.hslu.cas.msed.blobfish.base.PlayerColor
	{method}  {abstract} +getNextMove ( paramChessBoard1 : ch.hslu.cas.msed.blobfish.base.ChessBoard ) : String
}


interface ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider {
	{method}  {abstract} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.base.BotAlgorithm
	{method}  {abstract} +getAlgorithmName () : String
}


abstract class ch.hslu.cas.msed.blobfish.game.player.BotPlayer {
	{field} #botAlgorithm : ch.hslu.cas.msed.blobfish.base.BotAlgorithm
}


class ch.hslu.cas.msed.blobfish.game.player.BotPlayerFactory {
	{method}  {static} -botSupportsAlgorithm ( paramBotPlayerProvider1 : ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider , paramClass2 : Class ) : boolean
	{method}  {static} -castSafely ( paramBotPlayerProvider1 : ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider
	{method}  {static} -create ( paramBotPlayerProvider1 : ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider , paramPlayerColor2 : ch.hslu.cas.msed.blobfish.base.PlayerColor , paramBotAlgorithm3 : ch.hslu.cas.msed.blobfish.base.BotAlgorithm ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayer
	{method}  {static} +create ( paramString1 : String , paramString2 : String , paramint3 : int , paramEvaluationStrategy4 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor5 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayer
	{method}  {static} -getAlgorithmProviderReturnType ( paramBotAlgorithmProvider1 : ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider ) : Class
	{method}  {static} +getViableBotNames () : java.util.List
}


interface ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider {
	{method}  {abstract} +algorithmType () : Class
	{method}  {abstract} +create ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor , paramBotAlgorithm2 : ch.hslu.cas.msed.blobfish.base.BotAlgorithm ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayer
	{method}  {abstract} +getBotName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.HumanCliPlayer {
	{method} +getNextMove ( paramChessBoard1 : ch.hslu.cas.msed.blobfish.base.ChessBoard ) : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxAlphaBetaSequentialAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.MiniMaxAlphaBetaSequential
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxAlphaBetaSequentialWithCacheAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.cached.MiniMaxAlphaBetaSequentialWithCache
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxBotPlayer {
	{method} +getNextMove ( paramChessBoard1 : ch.hslu.cas.msed.blobfish.base.ChessBoard ) : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxBotPlayerProvider {
	{field} {static} -BOT_NAME : String
	{method} +algorithmType () : Class
	{method} +create ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor , paramMiniMaxAlgo2 : ch.hslu.cas.msed.blobfish.minimax.base.MiniMaxAlgo ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayer
	{method} +getBotName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxParallelAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.MiniMaxParallel
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxParallelWithCacheAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.cached.MiniMaxParallelWithCache
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxSequentialAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.MiniMaxSequential
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.player.MiniMaxSequentialWithCacheAlgorithmProvider {
	{field} {static} -ALGORITHM_NAME : String
	{method} +create ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.minimax.cached.MiniMaxSequentialWithCache
	{method} +getAlgorithmName () : String
}


class ch.hslu.cas.msed.blobfish.game.ui.board.AlphanumericBorderFieldRenderer {
	{field} {static} +BG_COLOR : String
	{field} {static} +FG_COLOR : String
	{field} {static} +PLACEHOLDER_CHARACTER : char
	{field} {static} +PLACEHOLDER_COLOR : String
	{field} {static} +RESET : String
	{field} {static} +ROW_STRING_WHITE : String
	{method} +renderColumnField ( paramint1 : int ) : String
	{method}  {static} -renderEmptyField () : String
	{method} +renderRow ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
	{method}  {static} -renderRowString ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


class ch.hslu.cas.msed.blobfish.game.ui.board.BoardRenderer {
	{method} ~render ( paramUiBoard1 : ch.hslu.cas.msed.blobfish.game.ui.board.UiBoard , paramPlayerColor2 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


interface ch.hslu.cas.msed.blobfish.game.ui.board.BorderFieldRenderer {
	{method}  {abstract} +renderColumnField ( paramint1 : int ) : String
	{method}  {abstract} +renderRow ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


class ch.hslu.cas.msed.blobfish.game.ui.board.ChessBoardRenderer {
	{field} -parser : ch.hslu.cas.msed.blobfish.game.ui.board.FenUiBoardParser
	{method} +render ( paramString1 : String , paramPlayerColor2 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : String
}


interface ch.hslu.cas.msed.blobfish.game.ui.board.FieldRenderer {
	{method}  {abstract} +render ( paramUiField1 : ch.hslu.cas.msed.blobfish.game.ui.board.UiField ) : String
}


enum ch.hslu.cas.msed.blobfish.game.ui.board.SquareColor {
	{field} +DARK
	{field} +LIGHT
}


class ch.hslu.cas.msed.blobfish.game.ui.screen.HomeScreen {
	{field} {static} -CALC_DEPTH : int
	{method} -getBotPlayer ( paramint1 : int , paramEvaluationStrategy2 : ch.hslu.cas.msed.blobfish.base.EvaluationStrategy , paramPlayerColor3 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : ch.hslu.cas.msed.blobfish.game.player.BotPlayer
	{method} +getMatchConfig () : ch.hslu.cas.msed.blobfish.game.MatchConfig
	{method} -getPlayerColor () : ch.hslu.cas.msed.blobfish.base.PlayerColor
}


class ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen {
	{field} -chessboard : ch.hslu.cas.msed.blobfish.base.ChessBoard
	{method} -getNextMove () : String
	{method} -printPosition ( paramPlayerColor1 : ch.hslu.cas.msed.blobfish.base.PlayerColor ) : void
	{method} -resetInternalBoard () : void
	{method} -shouldDisplayBoard ( paramAbstractPlayer1 : ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer ) : boolean
	{method} +start () : void
}




ch.hslu.cas.msed.blobfish.game.MatchConfig *--  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer : black
ch.hslu.cas.msed.blobfish.game.MatchConfig *--  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer : white
ch.hslu.cas.msed.blobfish.game.player.BotPlayer --|>  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer
ch.hslu.cas.msed.blobfish.game.player.BotPlayerFactory "1" o-- "0..*"  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider : ALGORITHMS
ch.hslu.cas.msed.blobfish.game.player.BotPlayerFactory "1" o-- "0..*"  ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider : BOT_PLAYERS
ch.hslu.cas.msed.blobfish.game.player.HumanCliPlayer *--  ch.hslu.cas.msed.blobfish.game.InputReader : reader
ch.hslu.cas.msed.blobfish.game.player.HumanCliPlayer --|>  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer
ch.hslu.cas.msed.blobfish.game.player.MiniMaxAlphaBetaSequentialAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxAlphaBetaSequentialWithCacheAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxBotPlayer --|>  ch.hslu.cas.msed.blobfish.game.player.BotPlayer
ch.hslu.cas.msed.blobfish.game.player.MiniMaxBotPlayerProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotPlayerProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxParallelAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxParallelWithCacheAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxSequentialAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.player.MiniMaxSequentialWithCacheAlgorithmProvider ..|>  ch.hslu.cas.msed.blobfish.game.player.BotAlgorithmProvider
ch.hslu.cas.msed.blobfish.game.ui.board.AlphanumericBorderFieldRenderer ..|>  ch.hslu.cas.msed.blobfish.game.ui.board.BorderFieldRenderer
ch.hslu.cas.msed.blobfish.game.ui.board.BoardRenderer *--  ch.hslu.cas.msed.blobfish.game.ui.board.BorderFieldRenderer : borderFieldRenderer
ch.hslu.cas.msed.blobfish.game.ui.board.BoardRenderer *--  ch.hslu.cas.msed.blobfish.game.ui.board.FieldRenderer : fieldRenderer
ch.hslu.cas.msed.blobfish.game.ui.board.ChessBoardRenderer *--  ch.hslu.cas.msed.blobfish.game.ui.board.BoardRenderer : boardRenderer
ch.hslu.cas.msed.blobfish.game.ui.screen.HomeScreen *--  ch.hslu.cas.msed.blobfish.game.InputReader : reader
ch.hslu.cas.msed.blobfish.game.ui.screen.HomeScreen *--  ch.hslu.cas.msed.blobfish.game.OutputWriter : writer
ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen *--  ch.hslu.cas.msed.blobfish.game.OutputWriter : writer
ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen *--  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer : black
ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen *--  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer : white
ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen *--  ch.hslu.cas.msed.blobfish.game.ui.board.ChessBoardRenderer : chessBoardRenderer
ch.hslu.cas.msed.blobfish.game.ui.screen.MatchScreen -->  ch.hslu.cas.msed.blobfish.game.player.AbstractPlayer : currentPlayer


@enduml